--- a/kustomization/overlays/prod/postgresql/kustomization.yml
+++ b/kustomization/overlays/prod/postgresql/kustomization.yml
@@ -5,6 +5,9 @@ kind: Kustomization
 components:
   - ../../../components/minio
   - ../../../components/postgresql-operator
+images:
+  - name: quay.io/minio/minio
+    newTag: latest@sha256:ed9be66eb5f2636c18289c34c3b725ddf57815f2777c77b5938543b78a44f144
 namespace: postgresql
 patches:
   - path: patches/minio/set_root_credentials.yml
