--- a/plays/k8s/prod.yml
+++ b/plays/k8s/prod.yml
@@ -10,11 +10,11 @@
           apiVersion: v1
           kind: Namespace
           metadata:
-            name: "{{ secret.namespace }}"
-      loop: "{{ secrets }}"
+            name: "{{ namespace }}"
+      loop: "{{ secrets | map(attribute='namespace') | unique | sort }}"
       loop_control:
-        label: "{{ secret.namespace }}"
-        loop_var: secret
+        label: "{{ namespace }}"
+        loop_var: namespace
     - name: Create secret
       kubernetes.core.k8s:
         apply: true
