`minio` config map should be prefixed with component name

--- a/kustomization/components/minio/kustomization.yml
+++ b/kustomization/components/minio/kustomization.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 configMapGenerator:
-  - name: scripts-configmap
+  - name: minio-scripts-configmap
     files:
       - configmap/start_minio.sh
 resources:
