Fix minio patching for monitoring namespace

--- a/kustomization/overlays/experimental/monitoring/patches/minio/configure_storage.yml
+++ b/kustomization/overlays/experimental/monitoring/patches/minio/configure_storage.yml
@@ -13,6 +13,8 @@ spec:
           recurring-job-group.longhorn.io/no-backup: enabled
         name: data
       spec:
+        accessModes:
+          - ReadWriteOnce
         resources:
           requests:
             storage: 100Gi
