Setup minio for monitoring namespace

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -227,6 +227,7 @@ bind_zones:
           - lg-penpot
           - longhorn.hogs
           - manyfold.hogs
+          - minio-monitoring.hogs
           - minio-postgres.hogs
           - mqtt.hogs
           - nas.hogs
