Rename loki values file to prepare for alloy

--- a/kustomization/overlays/experimental/monitoring/kustomization.yml
+++ b/kustomization/overlays/experimental/monitoring/kustomization.yml
@@ -10,7 +10,7 @@ helmCharts:
     version: 6.25.0
     repo: https://grafana.github.io/helm-charts
     releaseName: loki
-    valuesFile: values.yml
+    valuesFile: loki-values.yml
 images:
   - name: quay.io/minio/minio
     newTag: latest@sha256:ed9be66eb5f2636c18289c34c3b725ddf57815f2777c77b5938543b78a44f144
