Split alloy config for better organization

--- a/kustomization/overlays/experimental/monitoring/kustomization.yml
+++ b/kustomization/overlays/experimental/monitoring/kustomization.yml
@@ -7,7 +7,8 @@ components:
 configMapGenerator:
   - name: alloy-config
     files:
-      - configmap/config.alloy
+      - configmap/kubernetes.alloy
+      - configmap/loki.alloy
     options:
       disableNameSuffixHash: true
 helmCharts:
