--- a/kustomization/overlays/experimental/monitoring/alloy-values.yml
+++ b/kustomization/overlays/experimental/monitoring/alloy-values.yml
@@ -3,7 +3,7 @@ alloy:
   configMap:
     create: false
     name: alloy-config
-    key: config.alloy
+    key: /
   extraEnv:
     - name: POD_IP
       valueFrom:
