Add monitoring for minio with prometheus

--- a/kustomization/components/minio/kustomization.yml
+++ b/kustomization/components/minio/kustomization.yml
@@ -7,5 +7,7 @@ configMapGenerator:
     files:
       - configmap/start_minio.sh
 resources:
-  - statefulset.yml
+  - podmonitor.yml
   - service.yml
+  - servicemonitor.yml
+  - statefulset.yml
