--- a/kustomization/components/minio/statefulset.yml
+++ b/kustomization/components/minio/statefulset.yml
@@ -30,6 +30,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
+            - name: MINIO_PROMETHEUS_AUTH_TYPE
+              value: public
           ports:
             - name: web
               containerPort: 9090
