--- a/kustomization/components/minio/statefulset.yml
+++ b/kustomization/components/minio/statefulset.yml
@@ -26,12 +26,12 @@ spec:
             - -c
             - /scripts/start_minio.sh
           env:
-            - name: MINIO_CONSOLE_ADDRESS
+            - name: MINIO_PROMETHEUS_AUTH_TYPE
+              value: public
+            - name: POD_IP
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
-            - name: MINIO_PROMETHEUS_AUTH_TYPE
-              value: public
           ports:
             - name: web
               containerPort: 9090
