--- a/kustomization/overlays/prod/traefik/service/authelia.yml
+++ b/kustomization/overlays/prod/traefik/service/authelia.yml
@@ -8,5 +8,6 @@ spec:
     - name: web
       port: 9091
       protocol: TCP
+      targetPort: auth-web
   selector:
     app.kubernetes.io/name: traefik
