Use pod monitor instead of vector for cert-manager metrics

--- a/kustomization/components/cert-manager/kustomization.yml
+++ b/kustomization/components/cert-manager/kustomization.yml
@@ -9,3 +9,4 @@ patches:
 resources:
   # renovate: datasource=github-releases
   - https://github.com/cert-manager/cert-manager/releases/download/v1.16.3/cert-manager.yaml
+  - podmonitor.yml
