--- a/group_vars/kairos_prod.yml
+++ b/group_vars/kairos_prod.yml
@@ -14,7 +14,7 @@ k3s_token: !vault |
 
 secrets:
   - name: alertmanager-secret
-    namespace: prometheus
+    namespace: monitoring
     stringData:
       discord-alerts-webhook: !vault |
           $ANSIBLE_VAULT;1.1;AES256
