--- a/kustomization/overlays/prod/argo-proj/application/prometheus-operator.yml
+++ b/kustomization/overlays/prod/argo-proj/application/prometheus-operator.yml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: prometheus-operator
   namespace: argocd
 spec:
   project: default
