--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -23,6 +23,7 @@ resources:
   - application/lg.yml
   - application/longhorn.yml
   - application/manyfold.yml
+  - application/meta-monitoring.yml
   - application/paperless.yml
   - application/postgresql.yml
   - application/prometheus-operator.yml
