--- a/kustomization/components/longhorn/podmonitor.yml
+++ b/kustomization/components/longhorn/podmonitor.yml
@@ -1,8 +1,8 @@
 ---
 apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
+kind: PodMonitor
 metadata:
-  name: longhorn-servicemonitor
+  name: longhorn-podmonitor
 spec:
   endpoints:
     - port: manager
