--- a/kustomization/components/longhorn/podmonitor.yml
+++ b/kustomization/components/longhorn/podmonitor.yml
@@ -4,7 +4,7 @@ kind: PodMonitor
 metadata:
   name: longhorn-podmonitor
 spec:
-  endpoints:
+  podMetricsEndpoints:
     - port: manager
   selector:
     matchLabels:
