--- a/kustomization/components/minio/podmonitor.yml
+++ b/kustomization/components/minio/podmonitor.yml
@@ -9,6 +9,7 @@ spec:
   podMetricsEndpoints:
     - path: /minio/v2/metrics/node
       port: api
+  jobLabel: app.kubernetes.io/instance
   selector:
     matchLabels:
       app.kubernetes.io/name: minio
