Scale out alloy to ensure we do not miss logs

--- a/kustomization/overlays/experimental/monitoring/alloy-values.yml
+++ b/kustomization/overlays/experimental/monitoring/alloy-values.yml
@@ -42,7 +42,20 @@ configReloader:
       type: RuntimeDefault
 
 controller:
+  affinity:
+    podAntiAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: In
+                values:
+                  - alloy
+          topologyKey: kubernetes.io/hostname
+  podDisruptionBudget:
+    minAvailable: 1
   priorityClassName: application-infra
+  replicas: 3
   type: deployment
   volumes:
     extra:
