Include all namespaces when looking for service monitors

--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -22,6 +22,7 @@ spec:
     seccompProfile:
       type: RuntimeDefault
   serviceAccountName: prometheus-service-account
+  serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
   storage:
     volumeClaimTemplate:
