--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -24,6 +24,7 @@ resources:
   - application/longhorn.yml
   - application/manyfold.yml
   - application/meta-monitoring.yml
+  - application/node-monitoring.yml
   - application/paperless.yml
   - application/postgresql.yml
   - application/prometheus-operator.yml
