--- a/ansible-ci.cfg
+++ b/ansible-ci.cfg
@@ -1,3 +1,3 @@
 [defaults]
 collections_path=external_collections:/usr/share/ansible/collections
-roles_path=roles:external_roles
+roles_path=external_roles:roles
