--- a/kustomization/components/penpot/statefulset.yml
+++ b/kustomization/components/penpot/statefulset.yml
@@ -36,7 +36,7 @@ spec:
                 fieldRef:
                   fieldPath: status.podIP
             - name: PENPOT_REDIS_URI
-              value: redis://penpot-redis/
+              value: redis://penpot-redis/0
             - name: PENPOT_SECRET_KEY
               valueFrom:
                 secretKeyRef:
