Teach renovate about marinatedconfig dep names

--- a/renovate.json
+++ b/renovate.json
@@ -74,6 +74,20 @@
     },
     {
       "customType": "regex",
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "marinatedconcrete/config",
+      "fileMatch": [
+        "^kustomization/.+/.+/kustomization\\.yml$",
+        "^kustomization/.+/.+/.+/kustomization\\.yml$"
+      ],
+      "matchStrings": [
+        "- https://github\\.com/marinatedconcrete/config/releases/download/(?<currentValue>.*?)/",
+        "- https://github\\.com/marinatedconcrete/config/?\\?ref=(?<currentValue>.+?)$"
+      ],
+      "versioningTemplate": "regex:^(?<compatibility>.*)@v?(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)?$"
+    },
+    {
+      "customType": "regex",
       "fileMatch": [
         "^kustomization/.+/.+/kustomization\\.yml$",
         "^kustomization/.+/.+/.+/kustomization\\.yml$"
