--- a/renovate.json
+++ b/renovate.json
@@ -136,7 +136,7 @@
     }
   ],
   "extends": [
-    "config:best-practices"
+    "github>marinatedconcrete/config//renovate"
   ],
   "packageRules": [
     {
