--- a/renovate.json
+++ b/renovate.json
@@ -123,7 +123,7 @@
     }
   ],
   "extends": [
-    "github>marinatedconcrete/config//renovate/default#renovate-config@v1.0.0"
+    "github>marinatedconcrete/config//renovate/default#renovate-config-1.0.1"
   ],
   "packageRules": [
     {
