fix: upstream had a minor change in that it uses two services

--- a/kustomization/overlays/prod/factorio-relic/ingress.yml
+++ b/kustomization/overlays/prod/factorio-relic/ingress.yml
@@ -14,7 +14,7 @@ spec:
         paths:
           - backend:
               service:
-                name: factorio-svc
+                name: factorio-admin-svc
                 port:
                   name: web
             path: /
