--- a/kustomization/overlays/prod/factorio-relic/kustomization.yml
+++ b/kustomization/overlays/prod/factorio-relic/kustomization.yml
@@ -9,7 +9,7 @@ patches:
   - path: patches/set_load_balancer.yml
     target:
       kind: Service
-      name: factorio-svc
+      name: factorio-game-svc
 resources:
   - namespace.yml
   - ingress.yml
