--- a/renovate.json
+++ b/renovate.json
@@ -5,15 +5,6 @@
     {
       "customType": "regex",
       "fileMatch": [
-        "^.devcontainer/devcontainer.json$"
-      ],
-      "matchStrings": [
-        "\\srenovate:\\s+datasource=(?<datasource>.*?)\\sdepName=(?<depName>.*?)\\n\\s*\"[a-z]+\":\\s+\"(?<currentValue>.*?)\""
-      ]
-    },
-    {
-      "customType": "regex",
-      "fileMatch": [
         "(^|/|\\.)Dockerfile$"
       ],
       "matchStrings": [
@@ -123,7 +114,9 @@
     }
   ],
   "extends": [
-    "github>marinatedconcrete/config//renovate/default#renovate-config-1.1.0"
+    "config:best-practices",
+    "github>marinatedconcrete/config//renovate/devcontainer#renovate-config-2.0.0",
+    "github>marinatedconcrete/config//renovate/marinatedconcrete#renovate-config-2.0.0"
   ],
   "packageRules": [
     {
